| Summary: | ASTERISK-24382: chan_pjsip: Calling PJSIP_MEDIA_OFFER on a non-PJSIP channel results in an invalid reference of a channel pvt and a FRACK | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | |
| Date Opened: | 2014-10-01 04:34:05 | Date Closed: | 2014-10-05 19:54:41 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 12.6.0 13.0.0-beta2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Calling {{PJSIP_MEDIA_OFFER}} on a non-PJSIP channel is hazardous to your health:
{noformat} [Oct 1 04:32:10] VERBOSE[2691][C-00000000] pbx.c: Executing [ast2@default:2] Set("Local/ast2@default-00000000;2", "PJSIP_MEDIA_OFFER(audio)=ulaw") in new stack [Oct 1 04:32:10] ERROR[2691][C-00000000] astobj2.c: bad magic number for object 0x7f9e84001e40. Object is likely destroyed. [Oct 1 04:32:10] ERROR[2691][C-00000000] astobj2.c: FRACK!, Failed assertion 0 (0) [Oct 1 04:32:10] VERBOSE[2691][C-00000000] logger.c: Got 22 backtrace records [Oct 1 04:32:10] VERBOSE[2691][C-00000000] logger.c: #0: [0x5f98eb] main/utils.c:2649 __ast_assert_failed() (0x5f9867+84) [Oct 1 04:32:10] VERBOSE[2691][C-00000000] logger.c: #1: [0x45b5af] asterisk/utils.h:821 _ast_assert() [Oct 1 04:32:10] VERBOSE[2691][C-00000000] logger.c: #2: [0x45b69d] main/astobj2.c:131 INTERNAL_OBJ() [Oct 1 04:32:10] VERBOSE[2691][C-00000000] logger.c: #3: [0x45b6f8] main/astobj2.c:151 __ao2_lock() (0x45b6cd+2B) [Oct 1 04:32:10] VERBOSE[2691][C-00000000] logger.c: #4: [0x5e16d7] main/taskprocessor.c:723 taskprocessor_push() [Oct 1 04:32:10] VERBOSE[2691][C-00000000] logger.c: #5: [0x5e17d7] main/taskprocessor.c:735 ast_taskprocessor_push() (0x5e179e+39) [Oct 1 04:32:10] VERBOSE[2691][C-00000000] logger.c: #6: [0x7f9ee51a9bd5] res/res_pjsip.c:2796 ast_sip_push_task_synchronous() (0x7f9ee51a9b10+C5) [Oct 1 04:32:10] VERBOSE[2691][C-00000000] logger.c: #7: [0x7f9e729dc744] pjsip/dialplan_functions.c:902 pjsip_acf_media_offer_write() [Oct 1 04:32:10] VERBOSE[2691][C-00000000] logger.c: #8: [0x5720a7] main/pbx.c:4437 ast_func_write() (0x571f01+1A6) [Oct 1 04:32:10] VERBOSE[2691][C-00000000] logger.c: #9: [0x588d11] main/pbx.c:11463 pbx_builtin_setvar_helper() (0x588c3a+D7) [Oct 1 04:32:10] VERBOSE[2691][C-00000000] logger.c: #10: [0x58912f] main/pbx.c:11529 pbx_builtin_setvar() (0x588faa+185) {noformat} | ||
| Comments: | |||